<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:background="?android:attr/selectableItemBackground"
    android:layout_height="86dp">

    <ImageView
        android:id="@+id/imgAlarm"
        android:layout_width="54dp"
        android:layout_height="53dp"
        android:layout_alignParentStart="true"
        android:layout_centerVertical="true"
        android:layout_marginStart="23dp"
        tools:srcCompat="@tools:sample/backgrounds/scenic" />

    <LinearLayout
        android:layout_width="193dp"
        android:layout_height="wrap_content"
        android:layout_centerVertical="true"
        android:layout_marginStart="21dp"
        android:layout_marginEnd="34dp"
        android:layout_toStartOf="@+id/imgSetting"
        android:layout_toEndOf="@+id/imgAlarm"
        android:orientation="vertical">

        <TextView
            android:id="@+id/titleAlarm"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/title_alarm"
            android:textSize="40px" />

        <TextView
            android:id="@+id/dateAlarm"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/title_date" />

        <TextView
            android:id="@+id/repeatAlarm"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/repeat_type" />

    </LinearLayout>

    <ImageView
        android:id="@+id/imgSetting"
        android:layout_width="28dp"
        android:layout_height="28dp"
        android:layout_alignParentEnd="true"
        android:layout_centerVertical="true"
        android:layout_marginEnd="31dp"
        app:srcCompat="@android:drawable/ic_lock_idle_alarm" />
</RelativeLayout>